WIP trench compression.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180930 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180930 Burst analysis.ipynb
@@ -80,7 +80,7 @@
     "# from trench_segmentation.watershed import *\n",
     "# from util import *\n",
     "# from ui import *\n",
-    "import common, trench_detection, util, data_io\n",
+    "import common, trench_detection, util, data_io, processing\n",
     "import ui, diagnostics, metadata\n",
     "import workflow, image, geometry\n",
     "import trench_detection.hough, trench_detection.core\n",
@@ -798,6 +798,109 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Trench compression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zarrify = partial(\n",
+    "    zarr.array,\n",
+    "    compressor=processing.DEFAULT_COMPRESSOR,\n",
+    "    order=processing.DEFAULT_ORDER,\n",
+    "    chunks=False,\n",
+    ")\n",
+    "transformation = compose(partial(zarrify, dtype=\"u2\"), processing.index_dict_to_array)\n",
+    "frame_transformation = compose(\n",
+    "    zarrify, partial(image.quantize, bits=8), partial(image.downsample, factor=4)\n",
+    ")\n",
+    "a = processing.get_trench_crops(\n",
+    "    selected_trenches_segmentation2,\n",
+    "    frames_to_analyze2,\n",
+    "    transformation=transformation,\n",
+    "    include_frame=True,\n",
+    "    frame_transformation=frame_transformation,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "util.get_one(a, level=3).info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = util.get_one(a, level=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = zarrify(b, dtype=\"f2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b[0, 0, :10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c[0, 0, :10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b.info"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Trench compression cmdline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def do_compress_trenches(nd2_filename, out_filename):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Compress"
    ]
   },
@@ -807,45 +910,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "import os\n",
-    "from filelock import SoftFileLock\n",
-    "from contextlib import contextmanager\n",
-    "from numcodecs import Blosc\n",
-    "import wrapt\n",
-    "\n",
-    "DEFAULT_TRENCH_COMPRESSOR = Blosc(\n",
-    "    cname=\"zstd\", clevel=5, shuffle=Blosc.SHUFFLE, blocksize=0\n",
-    ")\n",
-    "# DEFAULT_TRENCH_CHUNKS = (1,1,1)\n",
-    "DEFAULT_TRENCH_ORDER = \"C\"\n",
-    "\n",
-    "\n",
-    "@contextmanager\n",
-    "def locked_zarr(\n",
-    "    filename, lock_dir=None, lock_suffix=\".lock\", zarr_store=zarr.LMDBStore\n",
-    "):\n",
-    "    # zarr_store = zarr.ZipStore\n",
-    "    zarr_store = partial(zarr.LMDBStore, map_async=True)\n",
-    "    if lock_dir:\n",
-    "        lock_filename = os.path.join(lock_dir, os.path.basename(filename) + lock_suffix)\n",
-    "    else:\n",
-    "        lock_filename = filename + lock_suffix\n",
-    "    lock_dir = os.path.dirname(lock_filename)\n",
-    "    if not os.path.isdir(lock_dir):\n",
-    "        os.makedirs(lock_dir)\n",
-    "    lock = SoftFileLock(lock_filename)  # TODO: replace with fasteners??\n",
-    "    with lock:\n",
-    "        store = zarr_store(filename)\n",
-    "        try:\n",
-    "            root = zarr.group(store=store, overwrite=False)\n",
-    "            yield root\n",
-    "        except:\n",
-    "            if hasattr(store, \"close\"):\n",
-    "                store.close()\n",
-    "            raise\n",
-    "\n",
-    "\n",
     "# def my_output_func():\n",
     "#     with locked_zarr('') as root:\n",
     "#         pass\n",
@@ -861,203 +925,7 @@
     "\n",
     "# def get_trench_crops_for_frame(trenches, filename, position, t, channels,\n",
     "#                                get_frame_func=workflow.get_nd2_frame):\n",
-    "#     pass\n",
-    "\n",
-    "# def _get_trench_crops(trenches, frames, get_frame_func=get_nd2_frame, transformation=np.array):\n",
-    "#     trench_stacks = defaultdict(list)\n",
-    "#     for framestack_idx, framestack_group in util.iter_index(trenches.groupby(['filename', 'position'])):\n",
-    "#         #t_group_iterator = util.iter_index(framestack_group.groupby(['t', 'trench_set']))\n",
-    "#         current_trenches = util.get_one(framestack_group.groupby('t'))[1]\n",
-    "#         # optimize iter_index by not repeating steps in inner loops\n",
-    "#         current_trenches_index = current_trenches.index.droplevel('t')\n",
-    "#         Index = namedtuple('Index', current_trenches_index.names, rename=True)\n",
-    "#         uls = current_trenches['upper_left'].values\n",
-    "#         lrs = current_trenches['lower_right'].values\n",
-    "#         for t in frames.loc[IDX[framestack_idx]].reset_index()['t']:\n",
-    "#             frame_idx = {'t': t, **framestack_idx._asdict()}\n",
-    "#             frame = get_frame_func(**frame_idx)\n",
-    "#             #for trench_idx, _ in iter_index(current_trenches_index):\n",
-    "#             for idx in range(len(current_trenches_index)):\n",
-    "#                 trench_idx = Index(*current_trenches_index[idx])\n",
-    "#                 ul = uls[idx]\n",
-    "#                 lr = lrs[idx]\n",
-    "#                 trench_stacks[trench_idx].append(frame[ul[1]:lr[1]+1,ul[0]:lr[0]+1])\n",
-    "#     if transformation is not None:\n",
-    "#         trench_stacks = {k: transformation(v) for k, v in trench_stacks.items()}\n",
-    "#     else:\n",
-    "#         trench_stacks = dict(trench_stacks) # convert back from a defaultdict\n",
-    "#     return trench_stacks\n",
-    "\n",
-    "# def _get_trench_crops(trenches, images, transformation=np.array):\n",
-    "#     trench_stacks = defaultdict(list)\n",
-    "#     uls = current_trenches['upper_left'].values\n",
-    "#     lrs = current_trenches['lower_right'].values\n",
-    "#     for t in frames.loc[IDX[framestack_idx]].reset_index()['t']:\n",
-    "#         frame_idx = {'t': t, **framestack_idx._asdict()}\n",
-    "#         frame = get_frame_func(**frame_idx)\n",
-    "#         #for trench_idx, _ in iter_index(current_trenches_index):\n",
-    "#         for idx in range(len(current_trenches_index)):\n",
-    "#             trench_idx = Index(*current_trenches_index[idx])\n",
-    "#             ul = uls[idx]\n",
-    "#             lr = lrs[idx]\n",
-    "#             trench_stacks[trench_idx].append(frame[ul[1]:lr[1]+1,ul[0]:lr[0]+1])\n",
-    "#     if transformation is not None:\n",
-    "#         trench_stacks = {k: transformation(v) for k, v in trench_stacks.items()}\n",
-    "#     else:\n",
-    "#         trench_stacks = dict(trench_stacks) # convert back from a defaultdict\n",
-    "#     return trench_stacks\n",
-    "\n",
-    "\n",
-    "def iterate_over_groupby(columns):\n",
-    "    @wrapt.decorator\n",
-    "    def wrapper(wrapped, instance, args, kwargs):\n",
-    "        res = {}\n",
-    "        for key, group in args[0].groupby(columns):\n",
-    "            key_kwargs = dict(zip(columns, key))\n",
-    "            res[key] = wrapped(group, *args[1:], **{**kwargs, **key_kwargs})\n",
-    "        return res\n",
-    "\n",
-    "    return wrapper\n",
-    "\n",
-    "\n",
-    "def index_dict_to_array(d, array_func=np.zeros):\n",
-    "    idx_max = max(d.keys())\n",
-    "    shape0 = util.get_one(d).shape\n",
-    "    shape = shape0 + (idx_max + 1,)\n",
-    "    ary = array_func(shape)\n",
-    "    for k, v in d.items():\n",
-    "        ary[..., k] = v\n",
-    "    return ary\n",
-    "\n",
-    "\n",
-    "def _get_trench_crops(\n",
-    "    trenches,\n",
-    "    frames,\n",
-    "    get_frame_func=workflow.get_nd2_frame,\n",
-    "    transformation=None,\n",
-    "    include_frame=False,\n",
-    "    frame_transformation=None,\n",
-    "    filename=None,\n",
-    "    position=None,\n",
-    "):\n",
-    "    # selected_trenches = trenches.groupby(['filename', 'position']).get_group((filename, position)\n",
-    "    # selected_trenches = trenches.xs((filename, position), drop_level=False)\n",
-    "    # TODO: here is where we specify logic for finding trenches for a given timepoint\n",
-    "    selected_trenches = trenches.xs((filename, position, 0), drop_level=False)\n",
-    "    trench_crops = {}\n",
-    "    if include_frame:\n",
-    "        whole_frames = {}\n",
-    "    for t, channel_frames in frames.groupby(\"t\"):\n",
-    "        channels = set(channel_frames.index.get_level_values(\"channel\"))\n",
-    "        channel_images = {\n",
-    "            channel: get_frame_func(\n",
-    "                filename=filename, position=position, channel=channel, t=t\n",
-    "            )\n",
-    "            for channel in channels\n",
-    "        }\n",
-    "        if include_frame:\n",
-    "            for channel, image in channel_images.items():\n",
-    "                if frame_transformation is not None:\n",
-    "                    image = frame_transformation(image)\n",
-    "                whole_frames.setdefault(channel, {})[t] = image\n",
-    "        channel_crops = _crop_trenches(selected_trenches, channel_images)\n",
-    "        for trench, trench_channels in channel_crops.items():\n",
-    "            for channel, crop in trench_channels.items():\n",
-    "                trench_crops.setdefault(trench, {}).setdefault(channel, {})[t] = crop\n",
-    "    for trench in trench_crops:\n",
-    "        if transformation is not None:\n",
-    "            trench_crops[trench] = {\n",
-    "                channel: transformation(crops)\n",
-    "                for channel, crops in trench_crops[trench].items()\n",
-    "            }\n",
-    "    if include_frame:\n",
-    "        for channel, frames in whole_frames.items():\n",
-    "            trench_crops.setdefault(\"_frame\", {})[channel] = frames\n",
-    "    return trench_crops\n",
-    "\n",
-    "\n",
-    "get_trench_crops = iterate_over_groupby([\"filename\", \"position\"])(_get_trench_crops)\n",
-    "_get_trench_stacks = partial(_get_trench_crops, transformation=index_dict_to_array)\n",
-    "get_trench_stacks = iterate_over_groupby([\"filename\", \"position\"])(_get_trench_stacks)\n",
-    "\n",
-    "# def crop_trenches(trenches, image, filename=None,\n",
-    "#                   position=None, t=None):\n",
-    "#     #selected_trenches = trenches.groupby(['filename', 'position', 't']).get_group((filename, position, t)\n",
-    "#     # TODO: for now, only select trench definitions for first timepoint\n",
-    "#     selected_trenches = util.get_one(trenches.groupby(['filename', 'position']).get_group((filename, position)).groupby('t'))[1]\n",
-    "#     return _crop_trenches(selected_trenches, image)\n",
-    "\n",
-    "\n",
-    "def _crop_trenches(trenches, images):\n",
-    "    trench_sets = trenches.index.get_level_values(\"trench_set\")\n",
-    "    trench_idxs = trenches.index.get_level_values(\"trench\")\n",
-    "    # this requires re-allocating arrays unless columns were stored next to each other by pandas blockmanager\n",
-    "    # uls = trenches['upper_left'].values\n",
-    "    # lrs = trenches['lower_right'].values\n",
-    "    uls_x = trenches[(\"upper_left\", \"x\")].values\n",
-    "    uls_y = trenches[(\"upper_left\", \"y\")].values\n",
-    "    lrs_x = trenches[(\"lower_right\", \"x\")].values\n",
-    "    lrs_y = trenches[(\"lower_right\", \"y\")].values\n",
-    "    trench_crops = {}\n",
-    "    for i in range(len(uls_x)):\n",
-    "        ul_x = uls_x[i]\n",
-    "        ul_y = uls_y[i]\n",
-    "        lr_x = lrs_x[i]\n",
-    "        lr_y = lrs_y[i]\n",
-    "        channel_crops = {\n",
-    "            channel: channel_image[ul_y : lr_y + 1, ul_x : lr_x + 1]\n",
-    "            for channel, channel_image in images.items()\n",
-    "        }\n",
-    "        trench_crops[(trench_sets[i], trench_idxs[i])] = channel_crops\n",
-    "    return trench_crops\n",
-    "\n",
-    "\n",
-    "@iterate_over_groupby([\"filename\", \"position\"])\n",
-    "def compress_frames(\n",
-    "    frames,\n",
-    "    trenches,\n",
-    "    output_func,\n",
-    "    get_frame_func=workflow.get_nd2_frame,\n",
-    "    compressor=DEFAULT_TRENCH_COMPRESSOR,\n",
-    "    order=DEFAULT_TRENCH_ORDER,\n",
-    "    filename=None,\n",
-    "    position=None,\n",
-    "):\n",
-    "    trench_crops = _get_trench_crops(\n",
-    "        frames, trenches, get_frame_func=get_frame_func, filename=None, position=None\n",
-    "    )\n",
-    "    with output_func(dict(filename=filename, position=position, t=t)) as root:\n",
-    "        for (trench_set, trench), trench_crops in trench_crops.items():\n",
-    "            for channel, trench_crop in trench_crops.items():\n",
-    "                # TODO\n",
-    "                if \"/\" in channel:\n",
-    "                    raise ValueError('channel name cannot contain \"/\"')\n",
-    "                arr_path = f\"{trench_set:d}/{trench:d}/{channel:s}\"\n",
-    "                old_arr = root.get(arr_path, None)\n",
-    "                dtype = util.get_one(trench_crops).dtype\n",
-    "                if old_arr is not None:\n",
-    "                    t_max = max(old_arr.shape[-1] - 1, t)\n",
-    "                else:\n",
-    "                    t_max = t\n",
-    "                shape = trench_crop.shape + (t_max + 1,)\n",
-    "                chunks = 1  # (1,1,1)\n",
-    "                new_data = np.zeros(shape)\n",
-    "                if old_arr is not None:\n",
-    "                    new_data[:, :, : old_arr.shape[-1] - 1] = old_arr\n",
-    "                new_data[:, :, t] = trench_crop\n",
-    "                print(\n",
-    "                    f\"writing array {filename} pos{position} ch:{channel} {trench_set}.{trench}.t{t}\"\n",
-    "                )\n",
-    "                new_arr = root.create_dataset(\n",
-    "                    arr_path,\n",
-    "                    overwrite=True,\n",
-    "                    data=new_data,\n",
-    "                    shape=shape,\n",
-    "                    dtype=dtype,\n",
-    "                    compressor=compressor,\n",
-    "                    chunks=chunks,\n",
-    "                    order=order,\n",
-    "                )"
+    "#     pass"
    ]
   },
   {
