Split out zarr writing function into write_images_to_zarr, supports arbitrarily nested dicts of images, although last level of nesting is assumed to be keyed by timepoint.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/181001 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/181001 Burst analysis.ipynb
@@ -874,6 +874,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import collections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "processing.compress_frames(\n",
     "    selected_trenches_segmentation2,\n",
     "    frames_to_analyze2,\n",
