WIP new analysis function.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/181001 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/181001 Burst analysis.ipynb
@@ -892,206 +892,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%lprun -f zarr.storage.DirectoryStore.__delitem__ -f zarr.storage.rmdir -f zarr.storage._init_array_metadata -f zarr.creation.array -f zarr.creation.init_array -f zarr.creation.create -f zarr.Group._create_dataset_nosync -f zarr.Group._write_op -f processing.compress_frames processing.compress_frames(selected_trenches_segmentation2, frames_to_analyze2, include_frame=True, frame_transformation=frame_transformation);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Trench compression cmdline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def do_compress_trenches(nd2_filename, out_filename):\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Compress"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_transformation = compose(\n",
-    "    partial(\n",
-    "        zarr.array,\n",
-    "        compressor=DEFAULT_TRENCH_COMPRESSOR,\n",
-    "        order=DEFAULT_TRENCH_ORDER,\n",
-    "        chunks=False,\n",
-    "    ),\n",
-    "    partial(image.quantize, bits=8),\n",
-    "    partial(image.downsample, factor=4),\n",
-    ")\n",
-    "# _transformation = compose(partial(image.downsample, factor=4))\n",
-    "a = get_trench_crops(\n",
-    "    selected_trenches_segmentation2,\n",
-    "    frames_to_analyze2,\n",
-    "    include_frame=True,\n",
-    "    frame_transformation=_transformation,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "util.get_one(a).keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "util.get_one(a, level=3)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "util.get_one(a)[\"_frame\"][\"YFP\"].keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "util.get_one(a)[\"_frame\"][\"YFP\"][0].info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "util.get_one(a)[\"_frame\"][\"MCHERRY\"][0].info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(util.get_one(a)[\"_frame\"][\"MCHERRY\"][0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%lprun -f get_trench_crops -f _get_trench_crops -f _crop_trenches -f crop_trenches -f iterate_over_groupby get_trench_crops(selected_trenches_segmentation2, frames_to_analyze2, include_frame=True, frame_transformation=_transformation)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "res = workflow.analyze_frames_and_trenches(\n",
-    "    selected_trenches_segmentation2,\n",
-    "    frames_to_analyze2,\n",
-    "    partial(compress_frame, output_func=my_output_func),\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Old"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "res = workflow.analyze_frames_and_trenches(\n",
-    "    selected_trenches_segmentation, frames_to_analyze[:1000], compress_trenches\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(frames_to_analyze)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1104,49 +904,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trenchwise_funcs = {\"_save\": None}\n",
-    "framewise_funcs = {\"_save\": None}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pixelwise_funcs = {\n",
-    "    \"mean\": np.mean,\n",
-    "    \"min\": np.min,\n",
-    "    \"max\": np.max,\n",
-    "    (\"p0.3\", \"p0.5\", \"p0.7\", \"p0.9\", \"p0.95\"): partial(\n",
-    "        np.percentile, q=(30, 50, 70, 90, 95)\n",
-    "    ),\n",
-    "}\n",
+    "pixelwise_funcs = {'mean': np.mean, 'min': np.min, 'max': np.max,\n",
+    "                   ('p0.3', 'p0.5', 'p0.7', 'p0.9', 'p0.95'): partial(np.percentile,\n",
+    "                                                                      q=(30,50,70,90,95))}\n",
     "\n",
-    "analyze_pixels = partial(workflow.map_over_labels, pixelwise_funcs)\n",
+    "def measurement_func(label_image, intensity_image):\n",
+    "    labelwise = {'noerode': workflow.map_frame_over_labels(pixelwise_funcs, label_image, intensity_image),\n",
+    "                 'erode3': workflow.map_frame_over_labels(pixelwise_funcs, util.repeat_apply(skimage.morphology.binary_dilation, 3)(label_image), intensity_image)}\n",
+    "    trenchwise = {'sharpness': image.sharpness, **pixelwise_funcs}\n",
+    "    return (pd.concat(trenchwise, axis=0), pd.concat(labelwise, axis=0))\n",
     "\n",
-    "trenchwise_funcs = {\"_save\": None, \"sharpness\": image.sharpness, **pixelwise_funcs}\n",
-    "framewise_funcs = {\"sharpness\": image.sharpness, **pixelwise_funcs}\n",
-    "\n",
-    "mask_funcs = {\n",
-    "    \"_save\": None,\n",
-    "    \"erode3\": compose(\n",
-    "        analyze_pixels,\n",
-    "    ),\n",
-    "    \"noerode\": None,\n",
-    "}\n",
-    "\n",
-    "trenchwise_funcs = {\"labelwise\": None}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def map_over_mask():\n",
-    "    pass"
+    "def measure(trenches, frames, measurement_func, segmentation_channel='MCHERRY', measure_channels=None,\n",
+    "            segment_func=trench_segmentation.watershed.segment_trench,\n",
+    "            include_frame=True, frame_bits=8, frame_downsample=4,\n",
+    "            output_func=processing.DEFAULT_OUTPUT_FUNC, filename=None, position=None):\n",
+    "    frame_transformation = compose(zarrify, partial(image.quantize, bits=frame_bits), partial(image.downsample, factor=frame_downsample))\n",
+    "    trench_crops = processing.get_trench_crops(trenches, frames, include_frame=include_frame, frame_transformation=frame_transformation)\n",
+    "    flattened_crops = {k: v in k, v in util.flatten_dict(trench_crops) if k[0] != '_frame'}\n",
+    "    segmentation_masks = {}\n",
+    "    measurements = {}\n",
+    "    for (trench_set, trench_idx, channel, t), crop in flattened_crops.items():\n",
+    "        if measure_channels is None or channel not in measure_channels:\n",
+    "            continue\n",
+    "        segmentation_key = (trench_set, trench_idx, segmentation_channel, t)\n",
+    "        segmentation_mask = segmentation_masks.get(segmentation_key, None)\n",
+    "        if segmentation_mask is None:\n",
+    "            segmentation_masks[segmentation_key] = segmentation_func(flattened_crops[segmentation_key])\n",
+    "        measurements[(trench_set, trench_idx, channel, t)] = measurement_func(segmentation_masks[segmentation_key], crop)\n",
+    "    # MEASUREMENTS\n",
+    "    images_to_write = dict(raw=trench_crops,segmentation=util.unflatten_dict(segmentation_masks))\n",
+    "    with output_func(dict(filename=filename, position=position)) as root:\n",
+    "        write_images_to_zarr(images,\n",
+    "                             root,\n",
+    "                             merge=merge,\n",
+    "                             overwrite=overwrite,\n",
+    "                             compressor=compressor,\n",
+    "                             order=order)"
    ]
   },
   {
@@ -1185,19 +978,11 @@
     "    list, partial(map, pa.RecordBatch.from_pandas), analyze_trench_func\n",
     ")\n",
     "\n",
-    "# analyze_trench_func = compose(lambda x: None, analyze_trench_func)\n",
-    "\n",
     "analyze_trench_func = partial(client.submit, analyze_trench_func, retries=2)\n",
     "\n",
     "analysis_futures_iter = workflow.analyze_frames_and_trenches_iter(\n",
     "    selected_trenches_segmentation, frames_to_analyze, analyze_trench_func\n",
-    ")\n",
-    "\n",
-    "# analysis_futures = workflow.analyze_frames_and_trenches(selected_trenches_segmentation,\n",
-    "#                                            frames_to_analyze,\n",
-    "#                                            analyze_trench_func)\n",
-    "\n",
-    "# display(trenchwise_df)"
+    ")"
    ]
   },
   {
